# java-frida

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.ps1  build.sh  run.ps1  run.sh
include/: frida-core-linux-x86_64.h  frida-core-macos-arm64.h  frida-core-windows-x86_64.h
src/: FridaExample.java  example.c  frida-integration.c  script.js
